--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,17 @@
 <!doctype html>
 {% load static %}
+
 <html lang="ru" class="h-100">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" type="image/png" href="{%static 'images/logo.png' %}"/>
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/logo.png' %}"/>
     <title>PythonBin</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="{%static 'css/bootstrap.min.css' %}">
+
     <!-- Custom styles for this template -->
     <style>
         main > .container {
@@ -59,7 +61,7 @@
 <main role="main" class="mt-3 flex-shrink-0">
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col text-center">
                 <h1>{{ pagename }}</h1>
                 <hr>
             </div>
@@ -67,39 +69,35 @@
 
         <div class="row">
             <div class="col">
-                <form action="" method="post">
+                <p>Добро пожаловать, уважаемый пользователь!
+                <p>На этом сайте ты сможешь сохранить свои заготовки кода на различных языках программирования<br>
+                    А также делиться ими с другими пользователями...
+                <hr>
+            </div>
+        </div>
+
+        <div class="row mt-3">
+            <div class="col-4 offset-4">
+                <a href="{%url 'add_snippet'%}" class="btn btn-secondary btn-block">Добавить сниппет</a>
+            </div>
+        </div>
+
+        <div class="row mt-3">
+            <div class="col">
+                <hr>
+                <h4>Найти сниппет по номеру</h4>
+                <form action='' id="view_snippet_form">
                     <div class="form-group row">
+                        <label for="snippet_id" class="col-sm-2 col-form-label col-form-label-lg">Номер:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control form-control-lg" placeholder="Название сниппета">
+                            <input type="number" class="form-control form-control-lg" id="snippet_id"
+                                   placeholder="введите число">
                         </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="col-sm-8">
-                            <div class="dropdown">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Язык сниппета
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item" href="#">Python</a>
-                                    <a class="dropdown-item" href="#">JavaScript</a>
-                                    <a class="dropdown-item" href="#">C++</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="col">
-                            <textarea cols="96" rows="10" placeholder="Код сниппета"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="col-8">
-                            <input type="submit" class="btn btn-primary btn-block" value="Сохранить">
+                        <div class="col-sm-2">
+                            <input type="submit" class="form-control form-control-lg btn btn-info" value="Найти">
                         </div>
                     </div>
                 </form>
-
             </div>
         </div>
     </div>
@@ -107,7 +105,7 @@
 
 <footer class="footer mt-auto py-3">
     <div class="container">
-    <span class="text-muted">&copy; Захаров Павел, {% now "Y" %}. <br>
+    <span class="text-muted">&copy; Юрченко Евгений, {% now "Y" %}. <br>
         Шаблон заготовка для урока</span>
     </div>
 </footer>
@@ -120,5 +118,4 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" crossorigin="anonymous"
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"></script>
 </body>
-
 </html>
